--- a/config.cfg
+++ b/config.cfg
@@ -5,11 +5,9 @@ LOCATIONS = 101180101
 ;LOCATION = 101020100
 ;常州
 ;LOCATION = 101191101
-KEY =
 
 [EMAIL]
 SMTP_SERVER = smtp.gmail.com
 SMTP_SERVER_PORT = 587
-SEND_EMAIL_ADDRESS = kk4public@gmail.com
-EMAIL_PASSWORD =
-RECEIVER = realkongzz@outlook.com,kozenzei@outlook.com
+SEND_EMAIL_ADDRESS = sender@gmail.com
+RECEIVER = reciver1@outlook.com,reciver2@outlook.com
